Fix display of services
The services section was incorrectly stacking text on top of itself. It was also starting to overlap when screen size got small, instead of being responsive.

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,10 +137,6 @@ a {
 }
 
 /* Services */
-.ocs-service p {
-    line-height: 8px;
-}
-
 .ocs-service .icon {
     color: rgb(40, 80, 119);
     font-size: 50px;
